Fixed an issue with overflow on #content

--- a/assets/stylesheets/layout.styl
+++ b/assets/stylesheets/layout.styl
@@ -181,7 +181,7 @@ table
   width 540px
 
 #content
-  margin-top 80px
+  padding-top 80px
 
 #footer
   margin 0px auto
